--- a/.github/workflows/build-mingw.yml
+++ b/.github/workflows/build-mingw.yml
@@ -40,7 +40,8 @@ jobs:
         shell: msys2 {0}
         run: |
             export PATH="${{ github.workspace }}/mingw64:${{ github.workspace }}/mingw64/bin:${{ github.workspace }}/msys64/usr/bin:/usr/bin" &&
-            cd libjit && g++ --version && ./bootstrap mingw64 -static --prefix="$(pwd)/${{ env.installationPath }}" && 
+            cd libjit && g++ --version && ./bootstrap && 
+            ./configure mingw64 -static --prefix="$(pwd)/${{ env.installationPath }}"
             make && make install
             
       - name: Archive Release
