--- a/.github/workflows/build-mingw.yml
+++ b/.github/workflows/build-mingw.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
             export PATH="${{ github.workspace }}/mingw64:${{ github.workspace }}/mingw64/bin:${{ github.workspace }}/msys64/usr/bin:/usr/bin" &&
             cd libjit && g++ --version && ./bootstrap && 
-            ./configure mingw64 -static --prefix="$(pwd)/${{ env.installationPath }}"
+            ./configure mingw64 --prefix="$(pwd)/${{ env.installationPath }}"
             make && make install
             
       - name: Archive Release
