--- a/.github/workflows/build-mingw.yml
+++ b/.github/workflows/build-mingw.yml
@@ -26,15 +26,15 @@ jobs:
         uses: msys2/setup-msys2@v2
         with:
           msystem: MINGW64
-          install: make autotools autoconf automake libtool autogen perl bison flex mingw-w64-x86_64-pkg-config
+          install: make autotools autoconf automake libtool autogen perl bison flex
           
       - name: curl x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z
         shell: cmd
         run:  cd /d ${{ github.workspace }} && curl https://github.com/2641797006/c/blob/master/GCC-zip/x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z?raw=true -L --output x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z && dir && 7z.exe x x86_64-8.1.0-release-posix-seh-rt_v6-rev0.7z
      
-#       - name: git clone pkg-config
-#         shell: cmd
-#         run: git clone --recursive https://github.com/dirkarnez/pkg-config-action.git && xcopy /E /H /Y /C "${{ github.workspace }}\pkg-config-action\*" "${{ github.workspace }}\mingw64\bin" && cd /d "${{ github.workspace }}\mingw64\bin" && pkg-config.exe --version
+      - name: git clone pkg-config
+        shell: cmd
+        run: git clone --recursive https://github.com/dirkarnez/pkg-config-action.git && xcopy /E /H /Y /C "${{ github.workspace }}\pkg-config-action\*" "${{ github.workspace }}\mingw64\bin" && cd /d "${{ github.workspace }}\mingw64\bin" && pkg-config.exe --version
         
       - name: set PATH, check mingw version, build and install
         shell: msys2 {0}
@@ -43,6 +43,7 @@ jobs:
             cd libjit && 
             g++ --version && 
             ./bootstrap && 
+            ./configure --help &&
             ./configure mingw64 --prefix="$(pwd)/${{ env.installationPath }}"
             
       - name: Archive Release
